# calculator-wasm-rust-pwa

./: Cargo.toml  README.md
.github/workflows/: build_binaries.yml  pages.yml  rust.yml
src/: app.rs  main.rs
